CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(goal-vision-tracker)
SET(CMAKE_CXX_STANDARD 11)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(OPENCV REQUIRED opencv)
PKG_CHECK_MODULES(FREENECT REQUIRED libfreenect)
PKG_CHECK_MODULES(ENET REQUIRED libenet)

LINK_DIRECTORIES(${OPENCV_LIBRARY_DIRS} ${FREENECT_LIBRARY_DIRS} ${ENET_LIBRARY_DIRS})

ADD_EXECUTABLE(
		goal-vision-tracker

		src/main.cpp
		src/KinectDevice.cpp
		src/PacketHandler.cpp
		src/Iolite.cpp
)

TARGET_INCLUDE_DIRECTORIES(goal-vision-tracker PUBLIC ${OPENCV_INCLUDE_DIRS} ${FREENECT_INCLUDE_DIRS} ${ENET_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(goal-vision-tracker PUBLIC ${OPENCV_LIBRARIES} ${FREENECT_LIBRARIES} ${ENET_LIBRARIES})